<resources>
    <string name="app_name">NOVA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="sign_in">Sign In</string>
    <string name="recovery_1">Recovery</string>
    <string name="recovery_2">password</string>
    <string name="recovery">Recovery password</string>
    <string name="register_now">Not a member?\n Register now</string>
    <string name="send_link">Send link</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="not_account">Do you have an account?\n Sign in</string>
    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="name_mix">Name your mix...</string>
    <string name="album_art">Album art</string>
    <string name="play">Play</string>
    <string name="favorite">Favorite</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create">CREATE</string>
    <string name="settings">Settings</string>
    <string name="hello">HELLO!</string>
    <string name="my_name_is">MY NAME IS</string>
    <string name="change_tags">Change Tags</string>
    <string name="logout">LOGOUT</string>
    <string name="search">Search</string>
    <string name="blind_audit">blind audit</string>
    <string name="signing_in">Signing in...</string>
    <string name="creating">"Creating..."</string>
    <string name="items">Items</string>
    <string name="saving">"Saving..."</string>
    <string name="more">0/3+</string>
    <string name="change_password">Change Password</string>
    <string name="ok">OK</string>
    <string name="genre_classical">classical music</string>
    <string name="genre_blues">blues</string>
    <string name="genre_jazz">jazz</string>
    <string name="genre_rock">rock</string>
    <string name="genre_lofi">lo-fi</string>
    <string name="genre_metal">metal</string>
    <string name="genre_pop">pop music</string>
    <string name="genre_rnb">R&amp;B</string>
    <string name="genre_electronic">electronic music</string>
    <string name="genre_hiphop">hip-hop</string>
    <string name="genre_techno">techno</string>
    <string name="genre_folk">folk</string>
    <string name="genre_country">country</string>
    <string name="genre_reggae">reggae</string>
    <string name="genre_latin">latin music</string>
    <string name="mood_happy">happy</string>
    <string name="mood_calm">calm</string>
    <string name="mood_daring">daring</string>
    <string name="mood_melancholic">melancholic</string>
    <string name="mood_energetic">energetic</string>
    <string name="mood_surreal">surreal</string>
    <string name="mood_evil">evil</string>
</resources>