<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_dots"
            android:text="@string/new_playlist"
            android:gravity="center"
            android:textColor="@color/purple"
            android:textSize="35sp"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCloseDialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_exit"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:boxStrokeColor="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        android:textColorHint="@color/light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_dots"
            android:hint="@string/name"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:textColorHint="@color/light"
            android:background="@color/light_blue"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreatePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/zen_dots"
        android:text="@string/create"
        android:textSize="20sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:backgroundTint="@color/purple"
        app:cornerRadius="4dp"
        android:layout_marginBottom="14dp"/>

</LinearLayout>