<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gradientBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/linesTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.55"
        android:scaleY="1.2"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-250dp"
        android:src="@drawable/lines2_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/linesTopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.55"
        android:scaleY="1.2"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/lines2_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/contentBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="22dp"
        android:src="@drawable/back_window"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/zen_dots"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/contentBackground"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"
        android:layout_marginTop="50dp"/>

    <!-- EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outlined"
        app:boxStrokeColor="@color/dark_blue"
        app:boxCornerRadiusTopStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/zen_dots"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/dark_blue"
        app:boxCornerRadiusTopStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/zen_dots"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/recoveryPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/zen_dots"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        android:layout_marginTop="6dp"/>

    <!-- BUTTON -->
    <Button
        android:id="@+id/actionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white_text"
        android:fontFamily="@font/zen_dots"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="70dp"
        app:backgroundTint="@color/purple"
        android:foreground="?attr/selectableItemBackground"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/recoveryPasswordText"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"/>

    <TextView
        android:id="@+id/registerNowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textColor="@color/purple"
        android:fontFamily="@font/zen_dots"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/actionButton"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"/>
</androidx.constraintlayout.widget.ConstraintLayout>