<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gradientBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/linesTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.55"
        android:scaleY="1.2"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/lines2_2" />

    <ImageView
        android:id="@+id/linesTopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.55"
        android:scaleY="1.2"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/lines2_1" />

    <ImageView
        android:id="@+id/contentBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:5"
        android:layout_margin="30dp"
        android:src="@drawable/back_window"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/zen_dots"
        android:text="@string/register"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"
        app:layout_constraintTop_toTopOf="@id/contentBackground"
        app:layout_constraintBottom_toBottomOf="@id/contentBackground"
        app:layout_constraintVertical_bias="0.15"/>

    <!-- Name поле -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="#F0F0F0"
        app:boxStrokeColor="@color/dark_blue"
        app:boxCornerRadiusTopStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        android:textColorHint="@color/dark_blue"
        app:hintTextColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:padding="20dp"
            android:fontFamily="@font/zen_dots"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email поле -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="#F0F0F0"
        app:boxStrokeColor="@color/dark_blue"
        app:boxCornerRadiusTopStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        android:textColorHint="@color/dark_blue"
        app:hintTextColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:padding="20dp"
            android:fontFamily="@font/zen_dots"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password поле -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="#F0F0F0"
        app:boxStrokeColor="@color/dark_blue"
        app:boxCornerRadiusTopStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        android:textColorHint="@color/dark_blue"
        app:hintTextColor="@color/dark_blue"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:padding="20dp"
            android:fontFamily="@font/zen_dots"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка Create Account -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/zen_dots"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        app:backgroundTint="@color/purple"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <TextView
        android:id="@+id/registerNowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/zen_dots"
        android:text="@string/not_account"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>